force-app/main/default/objects/Custom_Game_Quote__c/fields/Product_Markup_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Markup_2__c</fullName>
    <label>Product Purchase Markup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>