force-app/main/default/objects/Custom_Game_Quote__c/fields/Product_Price_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Price_1__c</fullName>
    <inlineHelpText>Total price of all components including markup</inlineHelpText>
    <label>Product Price (Old)</label>
    <summarizedField>Game_Components__c.Component_Price_1__c</summarizedField>
    <summaryForeignKey>Game_Components__c.Custom_Game_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>