force-app/main/default/objects/Custom_Game_Quote__c/fields/Product_Purchase_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Product_Purchase_Cost1__c</fullName>
    <description>OBSOLETE</description>
    <label>Product Purchase Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>