force-app/main/default/objects/Custom_Game_Quote__c/fields/Product_Purchase_Cost_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Purchase_Cost_2__c</fullName>
    <inlineHelpText>Total purchase cost of all components</inlineHelpText>
    <label>Product Purchase Cost</label>
    <summarizedField>Game_Components__c.Component_Purchase_Cost_2__c</summarizedField>
    <summaryForeignKey>Game_Components__c.Custom_Game_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>