force-app/main/default/objects/Custom_Game_Quote__c/fields/Product_Purchase_Markup_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Purchase_Markup_1__c</fullName>
    <description>IF((Product_Purchase_Cost1__c &gt; 0),(Product_Price_1__c - Product_Purchase_Cost1__c ) / Product_Purchase_Cost1__c ,null)</description>
    <formula>IF((Product_Purchase_Cost_1__c + Add_On_Price_1__c) &gt; 0,(Product_Price_1__c - (Product_Purchase_Cost_1__c + Add_On_Price_1__c)) / (Product_Purchase_Cost_1__c + Add_On_Price_1__c), null)</formula>
    <inlineHelpText>Markup of total order (may vary slightly from component markups due to rounding)</inlineHelpText>
    <label>Product Purchase Markup (Old)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>