force-app/main/default/objects/Custom_Game_Quote__c/fields/Product_Purchase_Markup_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Purchase_Markup_2__c</fullName>
    <formula>IF((Product_Purchase_Cost_2__c &gt; 0),(Product_Price_2__c - Product_Purchase_Cost_2__c) / Product_Purchase_Cost_2__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Markup of total order (may vary slightly from component markups due to rounding)</inlineHelpText>
    <label>Product Purchase Markup (Old)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>