force-app/main/default/objects/Custom_Game_Quote__c/fields/Product_Total_Price_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Total_Price_1__c</fullName>
    <description>Product_Purchase_Cost1__c + (Product_Purchase_Cost1__c * Product_Markup_1__c)</description>
    <formula>(Product_Purchase_Cost_1__c + Add_On_Price_1__c) + ((Product_Purchase_Cost_1__c + Add_On_Price_1__c)* Product_Markup_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>