force-app/main/default/objects/Custom_Game_Quote__c/fields/Product_Total_Price_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Total_Price_2__c</fullName>
    <formula>Product_Purchase_Cost_2__c + (Product_Purchase_Cost_2__c * Product_Markup_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>