force-app/main/default/objects/Custom_Game_Quote__c/fields/Proofing__c.field-meta.xml
<CustomField>
    <fullName>Proofing__c</fullName>
    <inlineHelpText>Proofing method</inlineHelpText>
    <label>Proofing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic</fullName>
                <default>true</default>
                <label>Electronic</label>
            </value>
            <value>
                <fullName>Hard Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>