force-app/main/default/objects/Custom_Game_Quote__c/fields/Prototyping_Cost_3__c.field-meta.xml
<CustomField>
    <fullName>Prototyping_Cost_3__c</fullName>
    <label>Prototyping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>