force-app/main/default/objects/Custom_Game_Quote__c/fields/Punch_Out_Sheet_Records__c.field-meta.xml
<CustomField>
    <fullName>Punch_Out_Sheet_Records__c</fullName>
    <label>Punch-Out Sheet Records</label>
    <summaryFilterItems>
        <field>Game_Components__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Punch-Out Sheet</value>
    </summaryFilterItems>
    <summaryForeignKey>Game_Components__c.Custom_Game_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>