force-app/main/default/objects/Custom_Game_Quote__c/fields/Quote_Created__c.field-meta.xml
<CustomField>
    <fullName>Quote_Created__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>Date that quote is created.</inlineHelpText>
    <label>Quote Created</label>
    <required>true</required>
    <type>Date</type>
</CustomField>