force-app/main/default/objects/Custom_Game_Quote__c/fields/Quote_From_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Quote_From_Calculator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote From Calculator</label>
    <type>Checkbox</type>
</CustomField>