force-app/main/default/objects/Custom_Game_Quote__c/fields/Quote_Number_Old__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number_Old__c</fullName>
    <displayFormat>G{YY}{MM}-{0000}</displayFormat>
    <label>Quote Number</label>
    <type>AutoNumber</type>
</CustomField>