force-app/main/default/objects/Custom_Game_Quote__c/fields/Quote_PDF__c.field-meta.xml
<CustomField>
    <fullName>Quote_PDF__c</fullName>
    <label>Quote PDF</label>
    <type>Url</type>
</CustomField>