force-app/main/default/objects/Custom_Game_Quote__c/fields/Quote_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Quote_Valid_Until__c</fullName>
    <defaultValue>Today() + 90</defaultValue>
    <inlineHelpText>Date that quote expires.</inlineHelpText>
    <label>Quote Valid Until</label>
    <type>Date</type>
</CustomField>