force-app/main/default/objects/Custom_Game_Quote__c/fields/Quoted_Shipping_Company_2__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Shipping_Company_2__c</fullName>
    <inlineHelpText>Shipping method for the standard portion of the shipment</inlineHelpText>
    <label>Quoted Shipping Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPS Ground</fullName>
            </value>
            <value>
                <fullName>UPS LTL</fullName>
            </value>
            <value>
                <fullName>Freight Forwarder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>