force-app/main/default/objects/Custom_Game_Quote__c/fields/Remark_2__c.field-meta.xml
<CustomField>
    <fullName>Remark_2__c</fullName>
    <inlineHelpText>Special notes about the order</inlineHelpText>
    <label>Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>