force-app/main/default/objects/Custom_Game_Quote__c/fields/Sample_Pack_Request_From_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Sample_Pack_Request_From_Calculator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Pack Request From Calculator</label>
    <type>Checkbox</type>
</CustomField>