force-app/main/default/objects/Custom_Game_Quote__c/fields/Sample_Pack_Sent__c.field-meta.xml
<CustomField>
    <fullName>Sample_Pack_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Pack Sent</label>
    <type>Checkbox</type>
</CustomField>