force-app/main/default/objects/Custom_Game_Quote__c/fields/Screen_Records__c.field-meta.xml
<CustomField>
    <fullName>Screen_Records__c</fullName>
    <label>Screen Records</label>
    <summaryFilterItems>
        <field>Game_Components__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Screen</value>
    </summaryFilterItems>
    <summaryForeignKey>Game_Components__c.Custom_Game_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>