force-app/main/default/objects/Custom_Game_Quote__c/fields/Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Customer__c</fullName>
    <inlineHelpText>Date that quote is sent to customer.</inlineHelpText>
    <label>Sent to Customer</label>
    <type>Date</type>
</CustomField>