force-app/main/default/objects/Custom_Game_Quote__c/fields/Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country__c</fullName>
    <label>Ship To Country</label>
    <type>TextArea</type>
</CustomField>