force-app/main/default/objects/Custom_Game_Quote__c/fields/Ship_To_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_State_Province__c</fullName>
    <label>Ship To State / Province</label>
    <type>TextArea</type>
</CustomField>