force-app/main/default/objects/Custom_Game_Quote__c/fields/Ship_To_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Street_2__c</fullName>
    <label>Ship To Street 2</label>
    <type>TextArea</type>
</CustomField>