force-app/main/default/objects/Custom_Game_Quote__c/fields/Ship_To_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Zip_Postal_Code__c</fullName>
    <label>Ship To Zip / Postal Code</label>
    <type>TextArea</type>
</CustomField>