force-app/main/default/objects/Custom_Game_Quote__c/fields/Split_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Split_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this order is being shipped to two or more locations.</inlineHelpText>
    <label>Split Shipping</label>
    <type>Checkbox</type>
</CustomField>