force-app/main/default/objects/Custom_Game_Quote__c/fields/Split_Shipping_Details__c.field-meta.xml
<CustomField>
    <fullName>Split_Shipping_Details__c</fullName>
    <inlineHelpText>The addresses, contact info, and quantity breakdown for all shipments in the order.</inlineHelpText>
    <label>Split Shipping Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>