force-app/main/default/objects/Custom_Game_Quote__c/fields/Tax_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_1__c</fullName>
    <inlineHelpText>10% for all orders shipped to Illinois</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>