force-app/main/default/objects/Custom_Game_Quote__c/fields/Tax_Dollars_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Dollars_1__c</fullName>
    <description>(Product_Total_Price_1__c + Prototyping_Cost_1__c + Add_On_Price_1__c) * Tax_1__c</description>
    <formula>((Product_Purchase_Cost_1__c + Prototyping_Cost_1__c + Add_On_Price_1__c) * Tax_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>