force-app/main/default/objects/Custom_Game_Quote__c/fields/Tax_Dollars_2__c.field-meta.xml
<CustomField>
    <fullName>Tax_Dollars_2__c</fullName>
    <formula>Product_Total_Price_2__c  * Tax_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>