force-app/main/default/objects/Custom_Game_Quote__c/fields/Total_Product_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Selling_Price__c</fullName>
    <formula>IF(ISPICKVAL(Use_to_Calculate_ROW_1__c, &quot;yes&quot;), Product_Total_Price_1__c + Assembly_Cost_1__c + Additional_Charges_1__c , 
IF(ISPICKVAL(Use_to_Calculate_ROW_2__c, &quot;yes&quot;), Product_Total_Price_2__c + Assembly_Cost_2__c + Additional_Charges_2__c, 
IF(ISPICKVAL(Use_to_Calculate_ROW_3__c, &quot;yes&quot;), Product_Total_Price_3__c + Assembly_Cost_3__c + Additional_Charges_3__c, 
IF(ISPICKVAL(Use_to_Calculate_ROW_4__c, &quot;yes&quot;), Product_Total_Price_4__c + Assembly_Cost_4__c + Additional_Charges_4__c,null 
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Product Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>