force-app/main/default/objects/Custom_Game_Quote__c/fields/Total_Quantity_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_2__c</fullName>
    <formula>IF(Opportunity__r.Eligible_For_Free_5_Overrun_Promotion__c=false,MIN(Order_Quantity_2__c + (Order_Quantity_2__c * 0.02),Order_Quantity_2__c + 75),MIN(Order_Quantity_2__c + (Order_Quantity_2__c * 0.07),Order_Quantity_2__c + (Order_Quantity_2__c * 0.05) + 75))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total quantity including overrun</inlineHelpText>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>