force-app/main/default/objects/Custom_Game_Quote__c/fields/Total_Standard_Shipping_Price_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Standard_Shipping_Price_2__c</fullName>
    <formula>Ocean_Freight_Price_2__c + Ground_Freight_Price_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Standard Shipping Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>