force-app/main/default/objects/Custom_Game_Quote__c/fields/Type_of_Quote__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Quote__c</fullName>
    <label>Type of Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Custom Quote</fullName>
                <default>true</default>
                <label>Fully Custom Quote</label>
            </value>
            <value>
                <fullName>Custom Freight Quote</fullName>
            </value>
            <value>
                <fullName>Saved Calculator Quote</fullName>
            </value>
            <value>
                <fullName>Blind Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>