force-app/main/default/objects/Custom_Game_Quote__c/fields/Use_to_Calculate_ROW_1__c.field-meta.xml
<CustomField>
    <fullName>Use_to_Calculate_ROW_1__c</fullName>
    <inlineHelpText>Indicates which quantity customer has ordered</inlineHelpText>
    <label>Use to Calculate ROW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>