force-app/main/default/objects/Custom_Game_Quote__c/recordTypes/Custom_Game_Quote.recordType-meta.xml
<RecordType>
    <fullName>Custom_Game_Quote</fullName>
    <active>true</active>
    <label>Custom Game Quote</label>
</RecordType>