force-app/main/default/objects/Custom_Game_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Is_Used_To_Calculate_ROW__c</columns>
    <columns>Use_to_Calculate_ROW_1__c</columns>
    <columns>Use_to_Calculate_ROW_3__c</columns>
    <columns>Use_to_Calculate_ROW_2__c</columns>
    <columns>Use_to_Calculate_ROW_4__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>International_Grand_Total_1__c</field>
        <operation>greaterOrEqual</operation>
        <value>3290.81</value>
    </filters>
    <filters>
        <field>International_Grand_Total_1__c</field>
        <operation>lessOrEqual</operation>
        <value>3290.83</value>
    </filters>
    <label>All</label>
</ListView>